--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <service android:name=".MyIntentService"/>
         <service android:name=".MyJobService"
             android:permission="android.permission.BIND_JOB_SERVICE" />
+        <service android:name=".MySchedulerIntentService"/>
     </application>
 
 </manifest>
